# hkvembedding

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build.sh  build_wheel.sh  logs.txt  setup.py
examples/: kv_embedding.py  kv_embedding2.py  kv_optimizer.py  quick_start.py  test.py  train_movielen_1m.py  training_example.py
include/hkv_wrapper/: hkv_wrapper.hpp
python/: __init__.py  hkvembedding.py
python/hkv_embedding/: __init__.py  hkvembedding.py  optimizer.py  utils.py
src/: hkv_wrapper.cu  python_bindings.cu
